--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a href="https://auto.ru/dilery/cars/all/" title="link 3">Нумерованный список ссылок с подписями title 3</a></li>
     </ol>
     <li><a href="ftp://demo:12345@test.rebex.net/readme.txt">Ссылку на файл на сервере FTP с авторизацией</a></li>
-    <h2 id="silka">Создание формы:</h2>
+    <h2 id="silka">Форма:</h2>
     <form action="/" method="POST">
     <label>
     ФИО:<br />
